tests/test_proof/bad/output/no_vars-empty.catala_en.Proof
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/no_vars-empty.catala_en
  | 
7 |   context y content integer
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
